--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "filepond": "^4.2.0",
     "filepond-plugin-image-preview": "^4.0.3",
+    "filepond-plugin-image-transform": "^3.2.2",
     "react-filepond": "^7.0.1"
   }
 }
